menu-piosenka-seowarszawie

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -116,6 +116,9 @@
 
 
             <!-- Z -->
+              <li>
+                <a href="{{ path('Senowarszawie') }}">Sen o Warszawie</a>
+              </li>
 
 
         </ul>
